// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline renders correctly 1`] = `
<DocumentFragment>
  <ul
    class="o-timeline"
    data-name="timeline"
  >
    <li
      class="c-timeline-item"
      data-name="timeline-item"
    >
      <div
        class="c-timeline-item__body"
      >
        lorem ipsum dolor
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Timeline renders correctly with a loading item 1`] = `
<DocumentFragment>
  <ul
    class="o-timeline o-timeline--loading"
    data-name="timeline"
  >
    <li
      class="c-timeline-item"
      data-name="timeline-item"
    >
      <div
        class="c-timeline-item__body"
      >
        lorem ipsum dolor
      </div>
    </li>
    <li
      class="c-timeline-item c-timeline-item--loading"
      data-name="timeline-item"
    >
      <div
        class="c-timeline-item__body"
      >
        lorem ipsum dolor
      </div>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`Timeline renders correctly with left Items 1`] = `
<DocumentFragment>
  <ul
    class="o-timeline o-timeline--alternate"
    data-name="timeline"
  >
    <li
      class="c-timeline-item"
      data-name="timeline-item"
    >
      <div
        class="c-timeline-item__body"
      >
        lorem ipsum dolor
      </div>
    </li>
    <li
      class="c-timeline-item c-timeline-item--left"
      data-name="timeline-item"
    >
      <div
        class="c-timeline-item__body"
      >
        lorem ipsum dolor
      </div>
    </li>
  </ul>
</DocumentFragment>
`;
